# Gilded_Rose_cpp

./: CMakeLists.txt  GildedRoseUnitTests.cc  README.md
src/: GildedRose.cc
test/: GildedRoseUnitTests.cc
